Fixed coding awesome section so that intro text doesn't wrap into three lines on georgian page.

--- a/_sass/components/_coding-awesome-section.scss
+++ b/_sass/components/_coding-awesome-section.scss
@@ -18,7 +18,7 @@
     background: $primary-color;
     background: rgba($primary-color, 0.5);
     color: white;
-    font-size: 1.4rem;
+    font-size: 1.38rem;
     font-weight: 400;
     padding-top: 16px;
     padding-bottom: 32px;
